--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
@@ -270,73 +270,23 @@
     {% endfor %}
 <thead>
 {% endblock grid_titles %}
-{#{% block grid_titles %}
-            <tr>
-                {% set isOrderable = (grid.isOrderable is defined ? grid.isOrderable : false) %}
-                {% if isOrderable %}
-                    <th class="" style="width: 1%;">
-                        <i class="fa fa-hand-o-up"></i>
-                    </th>
-                {% endif %}
-                {%set firtColumnH = false%}
-                {% for column in grid.columns %}
-                    {% if column.visible(grid.isReadyForExport) %}
-                        {% if firtColumnH==false %}
-                           {%set firtColumnH = true%}
-                           <th class="{% if column.align != 'left'%}align-{{ column.align }}{% endif %}{% if loop.last %} last-column{% endif %}"{% if(column.size > -1) %} style="width:{{ column.size }}px;"{% endif %}>
-                        {% else %}
-                           <th class="{% if column.align != 'left'%}align-{{ column.align }}{% endif %}{% if loop.last %} last-column{% endif %}"{% if(column.size > -1) %} style="width:{{ column.size }}px;"{% endif %}>
-                        {% endif %}
-                        {% if column.type == 'massaction' %}
-                                <i style="font-size: 12px;color: #428bca" class="icon-ok"></i> 
-                        {% else %}
-                            {% set columnTitle = grid.prefixTitle ~ column.title ~ '__abbr' %}
-                            {% if columnTitle|trans == columnTitle %}
-                                {% set columnTitle = grid.prefixTitle ~ column.title %}
-                            {% endif %}
-                            {% if (column.sortable) %}
-                                <a style="font-size: 13px" data-toggle="tooltip" data-placement="top" class="order" href="{{ grid_url('order', grid, column) }}" title="{{ 'Order by'|trans }} {{ columnTitle|trans }}">{{ columnTitle|trans }}</a>
-                                {% if column.order == 'asc' %}
-                                <i class="icon-chevron-up"></i>
-                                {% elseif column.order == 'desc' %}
-                                <i class="icon-chevron-down"></i>
-                                {% else %}
-                                {% endif %}
-                            {% else %}
-                                {{ columnTitle|trans }}
-                            {% endif %}
-                        {% endif %}
-                            </th>
-                    {% endif %}
-                {% endfor %}
-            </tr>
-{% endblock grid_titles %}#}
+
 {# -------------------------------------------------- grid_filters --------------------------------------------------- #}
 {% block grid_filters %}
-  <ul class="collapsible" data-collapsible="accordion">
-    <li {% if grid.isFiltered %} class="active" {% endif %}>
-      <div class="align-left collapsible-header {% if grid.isFiltered %} active {% endif %}"><i
-            class="mdi-content-filter-list"></i>{{ 'Filters'|trans }}</div>
-      <div class="collapsible-body" style="background-color: #FFFFFF">
 
-        <table>
-          <tr class="grid-row-filters row">
-            {% for column in grid.columns %}
-              {% if loop.index0!=0 %}
-                {% if column.visible(grid.isReadyForExport) and column.filterable %}
-                  <th {% if loop.last %} class="last-column"{% else %}class="col l3 column-{{ column.title }}"{% endif %}{% if(column.size > -1) %} style="width:" {% endif %}>
-                    {% if column.filterable %}
-                      {{ grid_filter(column, grid)|raw }}
-                    {% endif %}
-                  </th>
-                {% endif %}
+  <div class="row" style="margin-top: 0px;">
+    <div class="col m12" style="padding-bottom: 5px;">
+      {% for column in grid.columns %}
+        {% if loop.index0!=0 %}
+          {% if column.visible(grid.isReadyForExport) and column.filterable %}
+              {% if column.filterable %}
+                {{ grid_filter(column, grid)|raw }}
               {% endif %}
-            {% endfor %}
-          </tr>
-        </table>
-      </div>
-    </li>
-  </ul>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+    </div>
+  </div>
 
 {% endblock grid_filters %}
 
@@ -381,13 +331,13 @@
                     </div>
                   </tr>
                   <tr>
-                    <div class="form-search" style="margin-left: 20px;">
+                    <div class="form-search">
                       <div id="filter-bar" class="btn-toolbar">
                         <div class="filter-search btn-group pull-left input-append">
                           <div class="span6">
                             <div class="input-group input-group-sm">
                               <div class="input-group input-group-sm">
-                                <input style="margin-top: 5px !important;width: 175px" type="{{ column.inputType }}"
+                                <input style="width: 250px" type="{{ column.inputType }}"
                                        value="{{ from }}"
                                        class="input-small  search-query input-small grid-filter-input-query-from "
                                        placeholder="{{ column.title|trans }}"
