Create contact functionality

--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -125,11 +125,11 @@
 
   <div class="content" style="padding-top: 5px">
     <div class="row" style="margin-top: 5px;">
-      <div class="col m6">
+      <div class="col m6" style="padding-bottom: 0px;">
         <span style="font-size: 18px">All contacts:</span>
         {{ grid(grid, 'DashboardBundle:Grid:gridTemplateContactsAjax.html.twig') }}
       </div>
-      <div class="col m6">
+      <div class="col m6" style="padding-bottom: 0px;">
         <span style="font-size: 18px">Contacts of current list:</span>
         {{ grid(grid2, 'DashboardBundle:Grid:gridTemplateMyContactsAjax.html.twig') }}
       </div>
