--- a/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col md12 s12 hide">
-            <span class="alert alert-danger alert-dismissible fade in payment-errors" role="alert"></span>
+            <span id="stripe-payment-errors" class="alert alert-danger alert-dismissible fade in" role="alert"></span>
         </div>
 
         <div class="col s12 md12 " style="padding-bottom: 10px">
