--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
@@ -51,7 +51,7 @@
           {% if app.user.profile.photoId is defined and app.user.profile.photoId %}
             <img class="profile-photo-thumb" src="{{ app.user.profile.photoId | cloudinary_url({'format':'png', 'crop':'crop', 'gravity':'face', 'radius':'max', 'width':250, 'height':250}) }}">
           {% else %}
-            <img class="profile-photo-thumb circle" src="{{ asset('bundles/dashboard/people/01.jpg') }}">
+            <img class="profile-photo-thumb circle" src="{{ asset('bundles/dashboard/images/profile-icon.png') }}">
           {% endif %}
           {{ app.user.profile.fullName is defined ? app.user.profile.fullName : app.user.username }}
           <i class="mdi-navigation-expand-more right"></i>
