--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -18,7 +18,7 @@
             {% if app.user.profile.photoId is defined and app.user.profile.photoId %}
               <img class="profile-photo-thumb" src="{{ app.user.profile.photoId | cloudinary_url({'format':'png', 'crop':'crop', 'gravity':'face', 'radius':'max', 'width':250, 'height':250}) }}">
             {% else %}
-              <img class="profile-photo-thumb circle" src="{{ asset('bundles/dashboard/people/01.jpg') }}">
+              <img class="profile-photo-thumb circle" src="{{ asset('bundles/dashboard/images/profile-icon.png') }}">
             {% endif %}
             <h3 class="yay-user-info-name">{{ app.user.profile.fullName is defined ? app.user.profile.fullName : app.user.username }}</h3>
             <div class="yay-user-location"><i class="fa fa-map-marker"></i> Las Vegas, NV</div>
