--- a/src/DashboardBundle/Resources/views/Upgrade/checkout.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/checkout.html.twig
@@ -11,47 +11,12 @@
       <h5> Checkout </h5>
     </div>
     <div class="content">
-      <h4>
-        Payment Method:
-      </h4>
-      <div class="row">
-        <div class="col s6">
-          <ul class="collapsible" data-collapsible="accordion">
-            {% if card_info %}
-            <li class="active">
-              <div class="collapsible-header active"><i class="fa fa-credit-card"></i>Pay with stored credit card</div>
-              <div class="collapsible-body">
-                <div>
-                  <p style="padding: 10px">
-                    Card: xxxx-xxxx-xxxx-{{ card_info.last4 }}
-                  </p>
-                </div>
-                <div>
-                  <p style="padding: 10px">
-                    Type: {{ card_info.brand }}
-                  </p>
-                </div>
-                <div class="container">
-                    <center>
-                      <div style="margin: 20px;">
-                        <a class="btn" href="{{ path('upgrade_change_plan', {'plan_id':plan.id}) }}">
-                          Process Checkout
-                        </a>
-                      </div>
-
-                    </center>
-                </div>
-              </div>
-            </li>
-            {% endif %}
-            <li class="{{ card_info ? '' : 'active' }}">
-              <div class="collapsible-header {{ card_info ? '' : 'active' }}">
-                <i class="fa {{ card_info ? 'fa-pencil' : 'fa-credit-card' }}"></i>{{ card_info ? 'Update' : 'Add' }} Credit Card</div>
-              <div class="collapsible-body">
-                  {% include 'DashboardBundle:Upgrade:Partials/_stripe_card_form.html.twig' with {'btn_title':'Process Checkout' } %}
-              </div>
-            </li>
-          </ul>
+      <div class="row" style="margin-top: 0px">
+        <div class="col s5">
+          {{ include ('DashboardBundle:Upgrade/Partials:_checkout_details.html.twig') }}
+        </div>
+        <div class="col s6 offset-s1">
+          {{ include ('DashboardBundle:Upgrade/Partials:_payment_method.html.twig') }}
         </div>
       </div>
     </div>
@@ -69,7 +34,7 @@
       form_selector: '#stripe-card-form'
     });
 
-    MyStripe.success(function(token){
+    MyStripe.process(function(token){
       var data = {
         token: token
       };
