--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
@@ -1,56 +1,58 @@
-<div id="test3" class="col s12" style="color: #5e5e5e;">
-
-  <div class="row" style="margin-top: 0px;">
-    <nav style="padding-right: 25px;color: #424242;background-color: #fff;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;padding-left: 30px;">
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo"></a>
-        <ul class="right hide-on-med-and-down">
-          <li>
-            <a id="edit-profile" style="color: #9E9E9E" class="dropdown-button" href="#!">
-              <i class="mdi mdi-editor-mode-edit" style="font-size: 18px;"></i>
-            </a>
-          </li>
-        </ul>
+<div id="test3" class="row" style="color: #5e5e5e;">
+  <div class="col md6 s6">
+    <div class="row" id="edit-profile-information">
+      <div class="row" style="margin-top: 0px;">
+        <div class="col s3" style="padding-bottom: 10px;">
+          <span class="right">
+            <strong><b>Card Holder:</b> </strong>
+          </span>
+        </div>
+        <div class="col s9" style="padding-bottom: 10px;">
+          <span id="card_holder">
+            {% if card_info %}
+              {{ card_info.name }}
+            {% endif %}
+          </span>
+        </div>
       </div>
-    </nav>
+      <div class="row" style="margin-top: 0px;">
+        <div class="col s3" style="padding-bottom: 10px;">
+          <span class="right">
+            <strong>
+              <b>Stored Card:</b>
+            </strong>
+          </span>
+        </div>
+        <div class="col s9" style="padding-bottom: 10px;">
+          <span id="card_ended">
+            {% if card_info %}
+              XXXX-XXXX-XXXX-{{ card_info.last4 }}
+            {% else %}
+              No card
+            {% endif %}
+          </span>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 0px;">
+        <div class="col s3" style="padding-bottom: 10px;">
+          <span class="right">
+            <strong><b>Card Type:</b> </strong>
+          </span>
+        </div>
+        <div class="col s9" style="padding-bottom: 10px;">
+          <span>
+            {% if card_info %}
+              {{ card_info.brand }}
+            {% endif %}
+          </span>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="row" id="edit-profile-information">
-    <div class="row" style="margin-top: 0px;">
-      <div class="col s3" style="padding-bottom: 10px;">
-        <span class="right">
-          <strong>
-            <b>Billed to:</b>
-          </strong>
-        </span>
-      </div>
-      <div class="col s9" style="padding-bottom: 10px;">
-        <span>
-          {% if card_info %}
-            XXXX-XXXX-XXXX-{{ card_info.last4 }}
-          {% else %}
-            No card
-          {% endif %}
-        </span>
-      </div>
-    </div>
-    <div class="row" style="margin-top: 0px;">
-      <div class="col s3" style="padding-bottom: 10px;">
-        <span class="right">
-          <strong><b>Card Type:</b> </strong>
-        </span>
-      </div>
-      <div class="col s9" style="padding-bottom: 10px;">
-        <span>
-          {% if card_info %}
-            {{ card_info.brand }}
-          {% endif %}
-        </span>
-      </div>
-    </div>
+  <div class="col md6 s6">
     <div class="row" style="margin-top: 0px;">
       <div class="col s12" style="padding-bottom: 10px;">
-          <a class="btn modal-trigger"  href="#stripe-update-card-modal">
+          <a class="btn modal-trigger" id="stripe-show-card-modal"  href="#stripe-card-modal">
             {% if card_info %}
               Update Credit Card
             {% else %}
@@ -120,7 +122,7 @@
 </div>
 
 <!-- Modal Structure -->
-<div id="stripe-update-card-modal" class="modal modal-fixed-footer">
+<div id="stripe-card-modal" class="modal modal-fixed-footer">
   <div class="modal-content">
     <h4>
       {% if card_info %}
@@ -134,7 +136,10 @@
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" id="stripe-modal-cancel" class="modal-action modal-close waves-effect waves-red btn-flat ">Cancel</a>
-    <a href="#!" id="stripe-modal-accept" class="modal-action waves-effect waves-green btn-flat ">Accept</a>
+    <button href="#!" id="stripe-modal-cancel" class="modal-action modal-close waves-effect waves-red btn-flat ">Cancel</button>
+    <button href="#!" id="stripe-modal-accept" class="modal-action waves-effect waves-green btn-flat ">
+      <i id="stripe-modal-spiner" class="fa fa-spinner fa-spin right hide" style="margin-left: 5px;"></i>
+      Accept
+    </button>
   </div>
 </div>
