--- a/src/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/UserBundle/Resources/views/Profile/index.html.twig
@@ -165,7 +165,7 @@
 						{% if profile.photoId %}
 							<img src="{{ profile.photoId | cloudinary_url({'crop':'crop', 'gravity':'face', 'width':400, 'height':400}) }}">
 						{% else %}
-							<img src="{{ asset('bundles/dashboard/people/01.jpg') }}">
+							<img src="{{ asset('bundles/dashboard/images/profile-icon.png') }}">
 						{% endif %}
 					</div>
 					<div class="progress hide" style="height: 3px;margin-top: 0px;margin-bottom: 0px;">
@@ -235,6 +235,7 @@
 	<script src="{{ asset('bundles/dashboard/material/js/moment.js') }}"></script>
 	<script src="{{ asset('bundles/dashboard/material/js/pikaday.js') }}"></script>
 	<script src="{{ asset('bundles/dashboard/material/js/pikaday.jquery.js') }}"></script>
+	<script src="{{ asset('bundles/common/js/Application.js') }}"></script>
 
 	{# Upload scripts #}
 	<script src="{{ asset('bundles/common/bower_components/jquery-ui/ui/widget.js') }}" type="text/javascript"></script>
@@ -332,27 +333,45 @@
 				form_selector: '#stripe-card-form'
 			});
 
-			MyStripe.success(function(token){
+			MyStripe.process(function(token){
 				var data = {
 					token: token
 				};
 
 				$.post('{{ path('upgrade_update_card') }}', data, function(result){
+					$('#stripe-modal-accept').prop('disabled', false);
+					$('#stripe-modal-cancel').prop('disabled', false);
+					$('#stripe-modal-spiner').addClass('hide');
 					if(result.status == 'ok'){
-						$('#stripe-update-card-modal').closeModal();
+						$('#card_holder').text(result.data.name);
+						$('#card_ended').text('XXXX-XXXX-XXXX-' + result.data.last4);
+						$('#card_brand').text(result.data.brand);
+						App.toast('Credit card updated successfully');
+						$('#stripe-card-modal').closeModal();
 						$form_update_card.trigger("reset");
-						$('a.modal-action').prop('disabled', true);
 					}
 				});
+			}, function(){
+				$('#stripe-modal-accept').prop('disabled', false);
+				$('#stripe-modal-cancel').prop('disabled', false);
+				$('#stripe-modal-spiner').addClass('hide');
 			});
 
+			$('#stripe-show-card-modal').click(function(){
+				var $errors = $form.find('#stripe-payment-errors');
+				$errors.parent().addClass('hide');
+			});
 
-			$('a#stripe-modal-cancel').click(function(){
+			$('#stripe-modal-cancel').click(function(){
 				$form_update_card.trigger("reset");
 			});
 
-			$('a#stripe-modal-accept').click(function(){
-				$('a.modal-action').prop('disabled', true);
+			$('#stripe-modal-accept').click(function(){
+				if($form_update_card[0].checkValidity()){
+					$('#stripe-modal-spiner').removeClass('hide');
+					$('#stripe-modal-accept').prop('disabled', true);
+					$('#stripe-modal-cancel').prop('disabled', true);
+				}
 				$form_update_card.find('#stripe-btn-submit').click();
 			});
 
