Create contact functionality

--- a/src/DashboardBundle/Resources/views/Contact/new.html.twig
+++ b/src/DashboardBundle/Resources/views/Contact/new.html.twig
@@ -22,7 +22,7 @@
 						<div class="col m12" style="padding-bottom: 0px;">
 							<div class="input-field">
 								{{ form_widget(form.first_name) }}
-								<label for="property_lease_term" class="">First Name</label>
+								<label for="contact_first_name" class="">First Name</label>
 							</div>
 						</div>
 					</div>
@@ -30,7 +30,7 @@
 						<div class="col m12" style="padding-bottom: 0px;">
 							<div class="input-field">
 								{{ form_widget(form.last_name) }}
-								<label for="property_lease_term" class="">Last Name</label>
+								<label for="contact_last_name" class="">Last Name</label>
 							</div>
 						</div>
 					</div>
@@ -38,7 +38,7 @@
 						<div class="col m12">
 							<div class="input-field">
 								{{ form_widget(form.email) }}
-								<label for="property_lease_term" class="">Email</label>
+								<label for="contact_email" class="">Email</label>
 							</div>
 						</div>
 					</div>
