--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -107,19 +107,47 @@
   <div class="title">
     <h5> Add contacts of current list</h5>
     <div class="btn-group right">
-      <a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modal1"> <i class="mdi mdi-content-add left"></i>Add contact</a>
+      <a class="btn btn-small waves-dark waves-effect modal-trigger"  href="#modalAddContat"> <i class="mdi mdi-content-add left"></i>Add contact</a>
     </div>
   </div>
 
   <!-- Modal Structure -->
-  <div id="modal1" class="modal">
+  <div id="modalAddContat" class="modal" style="overflow-x: hidden;width: 35%;">
     <div class="modal-content">
       <h4>Add contacts of current list</h4>
-      <p>Text</p>
+      <form id="formContact" class="form-horizontal" action="" method="post" {{ form_enctype(form_contact) }}>
+        <div class="row" style="padding-right: 7%;margin-top: 1rem;">
+          <div class="row" style="margin-top: 0rem;">
+            <div class="col m12" style="padding-bottom: 0px;">
+              <div class="input-field">
+                {{ form_widget(form_contact.first_name) }}
+                <label for="contact_first_name" class="">First Name</label>
+              </div>
+            </div>
+          </div>
+          <div class="row" style="margin-top: 0rem;">
+            <div class="col m12" style="padding-bottom: 0px;">
+              <div class="input-field">
+                {{ form_widget(form_contact.last_name) }}
+                <label for="contact_last_name" class="">Last Name</label>
+              </div>
+            </div>
+          </div>
+          <div class="row" style="margin-top: 0rem;">
+            <div class="col m12">
+              <div class="input-field">
+                {{ form_widget(form_contact.email) }}
+                <label for="contact_email" class="">Email</label>
+              </div>
+            </div>
+          </div>
+        </div>
+        {{ form_rest(form_contact) }}
+      </form>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat ">Cancel</a>
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Acept</a>
+      <a id="button_addcontac" href="#!" class="modal-action waves-effect waves-green btn-flat ">Acept</a>
     </div>
   </div>
 
@@ -152,12 +180,31 @@
     </div>
   </div>
 </div>
+  <script src="{{ asset('bundles/common/js/jquery/plugin/jquery.form.js') }}" type="text/javascript"></script>
   <script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
   <script>
     $(document).ready(function () {
+
+      $('#formContact').bind('submit', function(e) {
+        e.preventDefault(); // <-- important
+        $(this).ajaxSubmit(function(data){
+          data = JSON.parse(data);
+          Materialize.toast(data.message, 4000);
+          if(data.code == 200){
+            grid_SECOND_updateGrid(event);
+            $('#modalAddContat').closeModal();
+          }
+        });
+      });
+
       $('#save_action').click(function () {
         App.submit('formSubmit', '{{ path('contactlist_update', { 'id': entity.id }) }}')
       });
+
+      $('#button_addcontac').click(function () {
+        App.submit('formContact', '{{ path('contactlist_addcontact2contactlist') }}')
+      });
+
     });
   </script>
 {% endblock content %}
