--- a/src/DashboardBundle/Resources/views/Contact/new.html.twig
+++ b/src/DashboardBundle/Resources/views/Contact/new.html.twig
@@ -16,12 +16,12 @@
 			</div>
 		</div>
 		<div class="content">
-			<form id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+			<form data-parsley-validate id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
 				<div class="row" style="padding-left: 20px;padding-right: 50%;margin-top: 0rem;">
 					<div class="row" style="margin-top: 0rem;">
 						<div class="col m12" style="padding-bottom: 0px;">
 							<div class="input-field">
-								{{ form_widget(form.first_name) }}
+								{{ form_widget(form.first_name, {'attr': {'required':'required'}}) }}
 								<label for="contact_first_name" class="">First Name</label>
 							</div>
 						</div>
@@ -29,7 +29,7 @@
 					<div class="row" style="margin-top: 0rem;">
 						<div class="col m12" style="padding-bottom: 0px;">
 							<div class="input-field">
-								{{ form_widget(form.last_name) }}
+								{{ form_widget(form.last_name, {'attr': {'required':'required'}}) }}
 								<label for="contact_last_name" class="">Last Name</label>
 							</div>
 						</div>
@@ -37,7 +37,7 @@
 					<div class="row" style="margin-top: 0rem;">
 						<div class="col m12">
 							<div class="input-field">
-								{{ form_widget(form.email) }}
+								{{ form_widget(form.email, {'attr': {'required':'required'}}) }}
 								<label for="contact_email" class="">Email</label>
 							</div>
 						</div>
@@ -47,13 +47,14 @@
 			</form>
 		</div>
 	</div>
+	<script src="{{ asset('bundles/dashboard/material/js/parsley.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
 	<script>
 		$(document).ready(function(){
+			$('#contact_email').attr('type','email');
 			$('#save_action').click(function(){
 				App.submit('formSubmit','{{ path('contact_create') }}')
 			});
-
 			$('#save_and_close_action').click(function(){
 				App.submit('formSubmit','{{ path('contact_create_close') }}')
 			});
