--- a/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/edit.html.twig
@@ -85,12 +85,12 @@
     </div>
     <div class="content">
 
-      <form id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+      <form data-parsley-validate id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
         <div class="row" style="padding-left: 20px;padding-right: 3%;margin-top: 1rem;">
           <div class="row" style="margin-top: 0rem;">
             <div class="col m6" style="padding-bottom: 15px;">
               <div class="input-field">
-                {{ form_widget(form.name) }}
+                {{ form_widget(form.name, {'attr': {'required':'required'}}) }}
                 <label for="property_lease_term" class="">Name</label>
               </div>
             </div>
@@ -115,12 +115,12 @@
   <div id="modalAddContat" class="modal" style="overflow-x: hidden;width: 35%;">
     <div class="modal-content">
       <h4>Add contacts of current list</h4>
-      <form id="formContact" class="form-horizontal" action="" method="post" {{ form_enctype(form_contact) }}>
+      <form data-parsley-validate id="formContact" class="form-horizontal" action="" method="post" {{ form_enctype(form_contact) }}>
         <div class="row" style="padding-right: 7%;margin-top: 1rem;">
           <div class="row" style="margin-top: 0rem;">
             <div class="col m12" style="padding-bottom: 0px;">
               <div class="input-field">
-                {{ form_widget(form_contact.first_name) }}
+                {{ form_widget(form_contact.first_name, {'attr': {'required':'required'}}) }}
                 <label for="contact_first_name" class="">First Name</label>
               </div>
             </div>
@@ -128,7 +128,7 @@
           <div class="row" style="margin-top: 0rem;">
             <div class="col m12" style="padding-bottom: 0px;">
               <div class="input-field">
-                {{ form_widget(form_contact.last_name) }}
+                {{ form_widget(form_contact.last_name, {'attr': {'required':'required'}}) }}
                 <label for="contact_last_name" class="">Last Name</label>
               </div>
             </div>
@@ -136,7 +136,7 @@
           <div class="row" style="margin-top: 0rem;">
             <div class="col m12">
               <div class="input-field">
-                {{ form_widget(form_contact.email) }}
+                {{ form_widget(form_contact.email, {'attr': {'required':'required'}}) }}
                 <label for="contact_email" class="">Email</label>
               </div>
             </div>
@@ -165,10 +165,10 @@
 
     <div class="row">
       <div class="col m2" style="padding-right: 0px">
-        <i class="green circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Enable contact</b>
+        <i class="green circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Enabled contact</b>
       </div>
       <div class="col m2">
-        <i class="red circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Disable contact</b>
+        <i class="red circle circle-status-bootom"> <span></span></i> <b style="margin-left: 30px;"> Disabled contact</b>
       </div>
       <div class="col m4">
         <div style="margin-top: -6px;">
@@ -180,10 +180,12 @@
     </div>
   </div>
 </div>
+  <script src="{{ asset('bundles/dashboard/material/js/parsley.min.js') }}" type="text/javascript"></script>
   <script src="{{ asset('bundles/common/js/jquery/plugin/jquery.form.js') }}" type="text/javascript"></script>
   <script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
   <script>
     $(document).ready(function () {
+      $('#contact_email').attr('type','email');
 
       $('#formContact').bind('submit', function(e) {
         e.preventDefault(); // <-- important
