--- a/src/DashboardBundle/Resources/views/Contact/edit.html.twig
+++ b/src/DashboardBundle/Resources/views/Contact/edit.html.twig
@@ -15,12 +15,12 @@
 			</div>
 		</div>
 		<div class="content">
-			<form id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
+			<form data-parsley-validate id="formSubmit" class="form-horizontal" action="" method="post" {{ form_enctype(form) }}>
 				<div class="row" style="padding-left: 20px;padding-right: 50%;margin-top: 0rem;">
 					<div class="row" style="margin-top: 0rem;">
 						<div class="col m12" style="padding-bottom: 0px;">
 							<div class="input-field">
-								{{ form_widget(form.first_name) }}
+								{{ form_widget(form.first_name, {'attr': {'required':'required'}}) }}
 								<label for="property_lease_term" class="">First Name</label>
 							</div>
 						</div>
@@ -28,7 +28,7 @@
 					<div class="row" style="margin-top: 0rem;">
 						<div class="col m12" style="padding-bottom: 0px;">
 							<div class="input-field">
-								{{ form_widget(form.last_name) }}
+								{{ form_widget(form.last_name, {'attr': {'required':'required'}}) }}
 								<label for="property_lease_term" class="">Last Name</label>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 					<div class="row" style="margin-top: 0rem;">
 						<div class="col m12">
 							<div class="input-field">
-								{{ form_widget(form.email) }}
+								{{ form_widget(form.email, {'attr': {'required':'required'}}) }}
 								<label for="property_lease_term" class="">Email</label>
 							</div>
 						</div>
@@ -46,9 +46,11 @@
 			</form>
 		</div>
 	</div>
+	<script src="{{ asset('bundles/dashboard/material/js/parsley.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/common/js/application.js') }}" type="text/javascript"></script>
 	<script>
 		$(document).ready(function(){
+			$('#contact_email').attr('type','email');
 			$('#save_action').click(function(){
 				App.submit('formSubmit','{{ path('contact_update', { 'id': entity.id }) }}')
 			});
