--- a/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplate.html.twig
@@ -162,7 +162,8 @@
     <tr>
     {% for column in grid.columns %}
         {% if column.visible(grid.isReadyForExport) %}
-            
+
+            {% if column.field != 'is_unsubscribed'  %}
             {%- spaceless %}
             {% if column.type == 'massaction' %}
                 <th style="width: 20px;position: relative;top: 3px;">
@@ -192,6 +193,7 @@
                 </th>
             {% endif %}
             {% endspaceless -%}
+        {% endif %}
         {% endif %}
     {% endfor %}
     <thead>
@@ -310,9 +312,11 @@
         <tr id="avsys-grid-tr-{{row.getPrimaryKeyValue.id}}" trInputId ="{{row.primaryFieldValue }}" {% if row.color != '' %} style="background-color:{{ row.color }};"{% endif %} class="avsys-grid-tr grid-row-cells {{ cycle(['odd', 'even'], loop.index) }}{% if row.class != '' %} {{ row.class }}{% endif %}">
         {% for column in grid.columns %}
             {% if column.visible(grid.isReadyForExport) %}
-            <td class="{% if column.class is defined %}{{column.class}}{%endif%}  grid-column-{{ column.renderBlockId }} align-{%if column.type == 'massaction' %}left{%else%}{{ column.align }}{% endif %}{% if loop.last %} last-column{% endif %}{% if last_row %} last-row{% endif %}">
+            {% if column.field != 'is_unsubscribed'  %}
+                <td class="{% if column.class is defined %}{{column.class}}{%endif%}  grid-column-{{ column.renderBlockId }} align-{%if column.type == 'massaction' %}left{%else%}{{ column.align }}{% endif %}{% if loop.last %} last-column{% endif %}{% if last_row %} last-row{% endif %}">
                     {{ grid_cell(column, row, grid)|raw }}
                 </td>
+                {% endif %}
             {% endif %}
         {% endfor %}
     {% endspaceless %}
