--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
@@ -122,7 +122,7 @@
 </div>
 
 <!-- Modal Structure -->
-<div id="stripe-card-modal" class="modal modal-fixed-footer">
+<div id="stripe-card-modal" class="modal modal-fixed-footer" style="width: 45%; height: 420px">
   <div class="modal-content">
     <h4>
       {% if card_info %}
