--- a/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
@@ -1,5 +1,4 @@
-<form id="stripe-card-form" class="container" style="width: 90%">
-
+<form id="stripe-card-form">
     <div class="row">
         <div class="col md12 s12 hide">
             <span id="stripe-payment-errors" class="alert alert-danger alert-dismissible fade in" role="alert"></span>
