--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
@@ -1,57 +1,56 @@
-<div id="test3" class="row" style="color: #5e5e5e;">
-  <div class="col md6 s6">
-    <div class="row" id="edit-profile-information">
+<div id="test3" class="col s12" style="color: #5e5e5e;">
+  <div class="row">
+    <div class="col md6 s6">
       <div class="row" style="margin-top: 0px;">
-        <div class="col s3" style="padding-bottom: 10px;">
-          <span class="right">
-            <strong><b>Card Holder:</b> </strong>
-          </span>
+        <div class="col md3 s3" style="padding-bottom: 10px;">
+        <span class="right">
+          <strong><b>Card Holder:</b> </strong>
+        </span>
         </div>
-        <div class="col s9" style="padding-bottom: 10px;">
-          <span id="card_holder">
-            {% if card_info %}
-              {{ card_info.name }}
-            {% endif %}
-          </span>
+        <div class="col md9 s9" style="padding-bottom: 10px;">
+        <span id="card_holder">
+          {% if card_info %}
+            {{ card_info.name }}
+          {% endif %}
+        </span>
         </div>
       </div>
       <div class="row" style="margin-top: 0px;">
-        <div class="col s3" style="padding-bottom: 10px;">
-          <span class="right">
-            <strong>
-              <b>Stored Card:</b>
-            </strong>
-          </span>
+        <div class="col md3 s3" style="padding-bottom: 10px;">
+        <span class="right">
+          <strong>
+            <b>Stored Card:</b>
+          </strong>
+        </span>
         </div>
-        <div class="col s9" style="padding-bottom: 10px;">
-          <span id="card_ended">
-            {% if card_info %}
-              XXXX-XXXX-XXXX-{{ card_info.last4 }}
-            {% else %}
-              No card
-            {% endif %}
-          </span>
+        <div class="col md9 s9" style="padding-bottom: 10px;">
+        <span id="card_ended">
+          {% if card_info %}
+            XXXX-XXXX-XXXX-{{ card_info.last4 }}
+          {% else %}
+            No card
+          {% endif %}
+        </span>
         </div>
       </div>
       <div class="row" style="margin-top: 0px;">
-        <div class="col s3" style="padding-bottom: 10px;">
-          <span class="right">
-            <strong><b>Card Type:</b> </strong>
-          </span>
+        <div class="col md3 s3" style="padding-bottom: 10px;">
+        <span class="right">
+          <strong><b>Card Type:</b> </strong>
+        </span>
         </div>
-        <div class="col s9" style="padding-bottom: 10px;">
-          <span>
-            {% if card_info %}
-              {{ card_info.brand }}
-            {% endif %}
-          </span>
+        <div class="col md9 s9" style="padding-bottom: 10px;">
+        <span>
+          {% if card_info %}
+            {{ card_info.brand }}
+          {% endif %}
+        </span>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col md6 s6">
-    <div class="row" style="margin-top: 0px;">
-      <div class="col s12" style="padding-bottom: 10px;">
+    <div class="col md6 s6">
+      <div class="row" style="margin-top: 0px;">
+        <div class="col md12 s12" style="padding-bottom: 10px;">
           <a class="btn modal-trigger" id="stripe-show-card-modal"  href="#stripe-card-modal">
             {% if card_info %}
               Update Credit Card
@@ -59,12 +58,13 @@
               Add Credit Card
             {% endif %}
           </a>
+        </div>
       </div>
     </div>
   </div>
 
   <div class="row">
-      <h3>Invoices History:</h3>
+      <h3>Payments History:</h3>
       <table class="row">
         <thead>
           <tr>
@@ -73,9 +73,6 @@
             </th>
             <th>
               Date
-            </th>
-            <th>
-              Prorate
             </th>
             <th>
               Amount
@@ -98,10 +95,6 @@
                 {{ invoice.date | date('M Y') }}
               </td>
               <td>
-                {% set prorate = invoice.amount_due - line_first.plan.amount %}
-                $ {{ (prorate > 0 ? prorate / 100 : prorate * -1 / 100) | number_format(2) }}
-              </td>
-              <td>
                 $ {{ (invoice.amount_due / 100) | number_format(2) }}
               </td>
               <td>
@@ -122,7 +115,7 @@
 </div>
 
 <!-- Modal Structure -->
-<div id="stripe-card-modal" class="modal modal-fixed-footer" style="width: 45%; height: 420px">
+<div id="stripe-card-modal" class="modal modal-fixed-footer" style="width: 35%; height: 420px">
   <div class="modal-content">
     <h4>
       {% if card_info %}
